--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@techstark/opencv-js": "4.10.0-release.1",
     "canvas": "^3.1.0",
-    "opencv.js": "^1.2.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
